# RoomieVideos

./: .env.example  .gitignore  README.md  animate.py  elevenlabs.py  make_tiktok.py  pyproject.toml  requirements.txt  soundtrack.py  wan_client.py  wan_video.py
docs/: wan_prompting_guide.md
pipeline/: card_gen.py  classifier.py  cli.py  guidance.md  image_gen.py  personas.py  transcript.py  tts.py
reddit_scraper/: cli.py  scraper.py  writer.py
