[project]
name = "reddit-scraper"
version = "0.1.0"
description = "Scrape posts and comments from Reddit subreddits"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
]

[project.scripts]
reddit-scraper = "reddit_scraper.cli:main"
